Fix contrast of "Address" label in explorer

--- a/programs/explorer/explorer.css
+++ b/programs/explorer/explorer.css
@@ -1,6 +1,8 @@
 body {
 	display: flex;
 	flex-direction: column;
+	background: var(--ButtonFace);
+	color: var(--ButtonText);
 }
 #address-bar,
 .toolbar {
